--- a/.github/workflows/main-branch.yml
+++ b/.github/workflows/main-branch.yml
@@ -7,15 +7,20 @@ on:
   pull_request:
 
 env:
-  IMAGE_NAME: registration
+  IMAGE_NAME: registration_management
 
 jobs:
   formatting:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Check code formatting using gofmt
-        uses: Jerome1337/gofmt-action@v1.0.5
+      - uses: actions/setup-node@v4
+        with:
+          node-version: '22'
+      - name: Get dependencies
+        run: npm ci
+      - name: Check code formatting
+        run: npm run format
   build:
     needs: formatting
     runs-on: ubuntu-latest
