--- a/assets/nginx.config
+++ b/assets/nginx.config
@@ -6,7 +6,7 @@ server {
     root /usr/share/nginx/html;
     index index.html;
 
-    location / {
-        try_files $uri /index.html;
+    location ~ /manage/(.*) {
+        try_files /$1 /index.html;
     }
 }
