--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tanstack/react-router": "^1.112.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.477.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
